feat: add pages

--- a/src/app/fonts.css
+++ b/src/app/fonts.css
@@ -13,3 +13,11 @@
   font-style: normal;
   font-display: swap;
 }
+
+@font-face {
+  font-family: "barbra";
+  src: url("./barbra-regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
